--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ngx-grpc/common": "^3.1.2",
     "@ngx-grpc/core": "^3.1.2",
     "@ngx-grpc/grpc-web-client": "^3.1.2",
+    "@ngxmc/datetime-picker": "18.2.2",
     "@ungap/structured-clone": "^1.3.0",
     "jest-junit": "^16.0.0",
     "luxon": "^3.6.1",
