--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@ngx-grpc/core": "^3.1.2",
     "@ngx-grpc/grpc-web-client": "^3.1.2",
     "@ungap/structured-clone": "^1.3.0",
+    "d3": "^7.9.0",
+    "force-graph": "^1.49.6",
     "jest-junit": "^16.0.0",
     "luxon": "^3.6.1",
     "rxjs": "~7.8.2",
@@ -52,9 +54,9 @@
     "@types/ungap__structured-clone": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "8.34.0",
     "@typescript-eslint/parser": "8.34.0",
+    "angular-eslint": "^19.8.0",
     "bumpp": "^9.11.1",
     "eslint": "^9.28.0",
-    "angular-eslint": "^19.8.0",
     "eslint-import-resolver-typescript": "^3.10.1",
     "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
