--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ngx-grpc/common": "^3.1.2",
     "@ngx-grpc/core": "^3.1.2",
     "@ngx-grpc/grpc-web-client": "^3.1.2",
+    "@types/d3": "^7.4.3",
     "@ungap/structured-clone": "^1.3.0",
     "d3": "^7.9.0",
     "force-graph": "^1.49.6",
