--- a/angular.json
+++ b/angular.json
@@ -50,25 +50,7 @@
               "src/assets"
             ],
             "styles": [
-              {
-                "inject": true,
-                "input": "src/assets/themes/light-blue.scss"
-              },
-              {
-                "inject": false,
-                "input": "src/assets/themes/light-pink.scss"
-              },
-              {
-                "inject": false,
-                "input": "src/assets/themes/dark-green.scss"
-              },
-              {
-                "inject": false,
-                "input": "src/assets/themes/dark-purple.scss"
-              },
-              "src/styles.scss",
-              "src/assets/styles/angular.scss",
-              "src/assets/styles/common.scss"
+              "src/styles.scss"
             ],
             "scripts": [],
             "browser": "src/main.ts",
