--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ngx-grpc/grpc-web-client": "^3.1.2",
     "@ngxmc/datetime-picker": "20.0.0",
     "@ungap/structured-clone": "^1.3.0",
+    "@zip.js/zip.js": "^2.8.11",
     "d3": "^7.9.0",
     "force-graph": "^1.49.6",
     "jest-junit": "^16.0.0",
@@ -48,19 +49,21 @@
     "@angular/cli": "~20.0.2",
     "@angular/compiler-cli": "^20.0.3",
     "@angular/localize": "20.0.3",
+    "@types/d3": "^7.4.3",
     "@types/google-protobuf": "^3.15.12",
     "@types/jest": "^29.5.14",
     "@types/luxon": "^3.6.2",
     "@types/node": "^22.15.31",
-    "@types/d3": "^7.4.3",
     "@types/ungap__structured-clone": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "8.34.0",
     "@typescript-eslint/parser": "8.34.0",
     "angular-eslint": "^19.8.0",
+    "blob-polyfill": "^9.0.20240710",
     "bumpp": "^9.11.1",
     "eslint": "^9.28.0",
     "eslint-import-resolver-typescript": "^3.10.1",
     "eslint-plugin-import": "^2.31.0",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "^14.6.0",
@@ -69,6 +72,7 @@
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.34.0"
+    "typescript-eslint": "^8.34.0",
+    "web-streams-polyfill": "^4.2.0"
   }
 }
