--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "@ngx-grpc/grpc-web-client": "^3.1.2",
     "@ngxmc/datetime-picker": "20.0.0",
     "@ungap/structured-clone": "^1.3.0",
-    "@zip.js/zip.js": "^2.8.11",
     "d3": "^7.9.0",
     "force-graph": "^1.49.6",
     "jest-junit": "^16.0.0",
+    "jszip": "^3.10.1",
     "luxon": "^3.6.1",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1"
@@ -58,7 +58,6 @@
     "@typescript-eslint/eslint-plugin": "8.34.0",
     "@typescript-eslint/parser": "8.34.0",
     "angular-eslint": "^19.8.0",
-    "blob-polyfill": "^9.0.20240710",
     "bumpp": "^9.11.1",
     "eslint": "^9.28.0",
     "eslint-import-resolver-typescript": "^3.10.1",
@@ -72,7 +71,6 @@
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.34.0",
-    "web-streams-polyfill": "^4.2.0"
+    "typescript-eslint": "^8.34.0"
   }
 }
