feat: result select (#1357)

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "d3": "^7.9.0",
     "force-graph": "^1.49.6",
     "jest-junit": "^16.0.0",
+    "jszip": "^3.10.1",
     "luxon": "^3.6.1",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1"
@@ -48,11 +49,11 @@
     "@angular/cli": "~20.0.2",
     "@angular/compiler-cli": "^20.0.3",
     "@angular/localize": "20.0.3",
+    "@types/d3": "^7.4.3",
     "@types/google-protobuf": "^3.15.12",
     "@types/jest": "^29.5.14",
     "@types/luxon": "^3.6.2",
     "@types/node": "^22.15.31",
-    "@types/d3": "^7.4.3",
     "@types/ungap__structured-clone": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "8.34.0",
     "@typescript-eslint/parser": "8.34.0",
